<resources>
    <string name="app_name">Glide for KTT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Setting</string>
    <string name="Kanye_West">Kanye West</string>
    <string name="Saint_Pablo_Tour">Saint Pablo Tour</string>
    <string name="Good_Music">Good Music</string>
    <string name="Music">Music</string>
    <string name="Album_Discussion">Album Discussion</string>
    <string name="Rock_Indie">Rock/Indie</string>
    <string name="Pop_RNB">Pop/R&amp;B</string>
    <string name="TV_Film">TV &amp; Film</string>
    <string name="Video_Games">Video Games</string>
    <string name="Gadgets_Tech">Gadgets &amp; Tech</string>
    <string name="Sports">Sports</string>
    <string name="Life_Advice">Life &amp; Advice</string>
    <string name="General_Discussion">General Discussion</string>
    <string name="Relationship_Advice">Relationship Advice</string>
    <string name="Fashion_Style">Fashion &amp; Style</string>
    <string name="Marketplace">Marketplace</string>
    <string name="Creative_Showcase">Creative Showcase</string>
    <string name="Art">Art</string>
    <string name="Mixtapes">Mixtape</string>
    <string name="Writing">Writing</string>
    <string name="Drake">Drake</string>
    <string name="Kendrick_Lamar">Kendrick Lamar</string>
    <string name="The_Weeknd">The Weeknd</string>
    <string name="Kid_Cudi">Kid Cudi</string>
    <string name="Lupe_Fiasco">Lupe Fiasco</string>
    <string name="Odd_Future">Odd Future</string>
    <string name="Misc">Misc</string>
    <string name="Classic_GG">Classic G&amp;G</string>
    <string name="KTT_Help_and_Problems">KTT Help and Problems</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="Feed">Feed</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="Kanye_Group_Header">Kanye</string>
    <string name="General_Discussion_Header">General Discussion</string>
    <string name="Other_Artists">Other Artists</string>
    <string name="Offtopic_Header">Off Topic</string>
    <string name="setting_title">Settings</string>
    <string name="profile_name"><b>Profile Name</b></string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="action_refresh">Refresh Page</string>
    <string name="Next_Page">Next Page</string>
    <string name="action_help">Help</string>
    <string name="action_search">Search</string>
    <string name="Guest_Button"><b>Guest Login</b></string>
    <string name="Login"><b>Login</b></string>
    <string name="Register"><u><b>Register</b></u></string>
    <string name="Description">Description</string>
    <string name="title_activity_feed">Feed</string>
    <string name="action_menu">Menu</string>
    <string name="Person">Person</string>
    <string name="Previous_Page">Previous Page</string>
    <string name="action_next_page">Next Page</string>
    <string name="action_previous_page">Previous Page</string>
    <string name="action_reply">Reply</string>
    <string name="MessageBoard">MessageBoard</string>
    <string name="travisscott">Travis Scott</string>
    <string name="Profile_Page">ProfilePage</string>
    <string name="action_send">Send PM</string>
    <string name="unfollow">Unfollow</string>
    <string name="profilebutton">Profile</string>
    <string name="crash_toast_text">Darn, the app just crashed. Email the crash report to the developer please!</string>
    <string name="soundcloud"><a href="http://www.soundcloud.com/stefan-petit-freres-jr">SoundCloud</a></string>
    <string name="Info">Info</string>
    <string name="AboutMe">About Me</string>
    <string name="action_logout">Logout</string>
    <string-array name="tabs">
        <item>Posts</item>
        <item>Topics</item>
        <item>Followers</item>
    </string-array>
    <!--The Emoji Names-->
    <string-array name="kttemojis">
        <item>&amp;#128522</item>
        <item>&amp;#128546</item>
        <item>:agreed:</item>
        <item>:aliveclap:</item>
        <item>:aliveparrot:</item>
        <item>:allears:</item>
        <item>:amber:</item>
        <item>:atiavy:</item>
        <item>:awesome:</item>
        <item>:banderas:</item>
        <item>:banjo:</item>
        <item>:banplz:</item>
        <item>:bear:</item>
        <item>:beat:</item>
        <item>:binowhat:</item>
        <item>:bitchgtfo:</item>
        <item>:bluetard:</item>
        <item>:bronwhat:</item>
        <item>:bruh:</item>
        <item>:button:</item>
        <item>:bye2:</item>
        <item>:bye:</item>
        <item>:camby:</item>
        <item>:camvp:</item>
        <item>:clap:</item>
        <item>:cmon:</item>
        <item>:cold:</item>
        <item>:colenice:</item>
        <item>:cosby:</item>
        <item>:cry:</item>
        <item>:cryfam:</item>
        <item>:cudifly:</item>
        <item>D:</item>
        <item>:dab:</item>
        <item>:dahell:</item>
        <item>:daisyscust:</item>
        <item>:damn:</item>
        <item>:dash:</item>
        <item>:datass:</item>
        <item>:dead2:</item>
        <item>:dead:</item>
        <item>:delfap:</item>
        <item>:denzel:</item>
        <item>:dk:</item>
        <item>:dno:</item>
        <item>:doge:</item>
        <item>:dontcare:</item>
        <item>:drakehah:</item>
        <item>:drakelaff2:</item>
        <item>:drakelaff:</item>
        <item>:drakewhat:</item>
        <item>:dw:</item>
        <item>:epic:</item>
        <item>:eyeroll:</item>
        <item>:facepalm2:</item>
        <item>:facepalm:</item>
        <item>:fck:</item>
        <item>:feedme:</item>
        <item>:ffpu:</item>
        <item>:fire:</item>
        <item>:flames:</item>
        <item>:floyd:</item>
        <item>:fly:</item>
        <item>:foh:</item>
        <item>:frankwd:</item>
        <item>:fuu:</item>
        <item>:getout:</item>
        <item>:ghey:</item>
        <item>:golfclap:</item>
        <item>:h5:</item>
        <item>:hah2:</item>
        <item>:hah3:</item>
        <item>:hah:</item>
        <item>:happyhug:</item>
        <item>:hat:</item>
        <item>:haw:</item>
        <item>:he:</item>
        <item>:hhh:</item>
        <item>:hnng:</item>
        <item>:hug:</item>
        <item>:huh:</item>
        <item>:jayhuh:</item>
        <item>:jaylaff:</item>
        <item>:jayout:</item>
        <item>:jo:</item>
        <item>:joe:</item>
        <item>:jordancry:</item>
        <item>:jordanlaff:</item>
        <item>:jordanok:</item>
        <item>:jordanscowl:</item>
        <item>:kanyeoh:</item>
        <item>:kanyeshh:</item>
        <item>:kanyeshrug:</item>
        <item>:keefnah:</item>
        <item>:kendricklaff:</item>
        <item>:kermit2:</item>
        <item>:kermit:</item>
        <item>:khaled2:</item>
        <item>:khaled:</item>
        <item>:koolaid:</item>
        <item>:laugh:</item>
        <item>:lebrontroll:</item>
        <item>:leo:</item>
        <item>:lilb:</item>
        <item>:lol:</item>
        <item>:lying:</item>
        <item>:mad:</item>
        <item>:martin:</item>
        <item>:marty:</item>
        <item>:maybe:</item>
        <item>:meek:</item>
        <item>:melosalute:</item>
        <item>:mhmm:</item>
        <item>:mindfk:</item>
        <item>:mindfkd:</item>
        <item>:mm:</item>
        <item>:mrkrabs:</item>
        <item>:mystery:</item>
        <item>:nas:</item>
        <item>:newyear:</item>
        <item>:ninja:</item>
        <item>:northout:</item>
        <item>:notsureif:</item>
        <item>:noudidnt:</item>
        <item>:obama:</item>
        <item>:obamahhh:</item>
        <item>:oblivious:</item>
        <item>:offtopic:</item>
        <item>:oh2:</item>
        <item>:oh:</item>
        <item>:ohno:</item>
        <item>:ohnorth:</item>
        <item>:ohtu:</item>
        <item>:okay:</item>
        <item>:omg:</item>
        <item>:omgfap:</item>
        <item>:paranoid:</item>
        <item>:parrot:</item>
        <item>:peekaboo:</item>
        <item>:perv:</item>
        <item>:pog:</item>
        <item>:pokerface:</item>
        <item>:popcorn:</item>
        <item>:prince:</item>
        <item>:psyboom:</item>
        <item>:puke:</item>
        <item>:randall:</item>
        <item>:rejoice:</item>
        <item>:ridin:</item>
        <item>:robo:</item>
        <item>:russ:</item>
        <item>:sadblu:</item>
        <item>:sage:</item>
        <item>:salt:</item>
        <item>:salute:</item>
        <item>:sarc2:</item>
        <item>:scoobyscust:</item>
        <item>:seanshrug:</item>
        <item>:shame:</item>
        <item>:shh:</item>
        <item>:siren:</item>
        <item>:slick:</item>
        <item>:smh:</item>
        <item>:smug:</item>
        <item>:snifle:</item>
        <item>:snoopsmh:</item>
        <item>:sonicshrug:</item>
        <item>:soon:</item>
        <item>:stronger:</item>
        <item>:tash:</item>
        <item>:travlaff:</item>
        <item>:tswift:</item>
        <item>:tumble:</item>
        <item>:twisted:</item>
        <item>:tylee:</item>
        <item>:tyrone:</item>
        <item>:vom:</item>
        <item>:waiting:</item>
        <item>:wd:</item>
        <item>:we:</item>
        <item>:wellinever:</item>
        <item>:what:</item>
        <item>:whew:</item>
        <item>:whoa:</item>
        <item>:wilma:</item>
        <item>:wizhhh:</item>
        <item>:wom:</item>
        <item>:word:</item>
        <item>:work:</item>
        <item>:worship:</item>
        <item>:wtf:</item>
        <item>:wut:</item>
        <item>:yar:</item>
        <item>:yawn:</item>
        <item>:yay:</item>
        <item>:yejoice:</item>
        <item>:yesip:</item>
        <item>:yewhat:</item>
        <item>:yonce:</item>
        <item>:youknow:</item>
        <item>&gt;:(</item>
        <item>:-[</item>
        <item> &lt;3 </item>
        <item>:-X</item>
        <item>&gt;_&gt;</item>
        <item>:o</item>
        <item>:D</item>
        <item>:)</item>
        <item>:-\</item>
        <item>;)</item>
    </string-array>
    <string name="title_activity_test">Test</string>

</resources>
