<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="101"
        android:title="@string/action_refresh"
        app:showAsAction="always"/>
    <group android:id="@+id/my_move" android:checkableBehavior="none"
        >

        <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="102"
            app:showAsAction="never"
            />

        <item
            android:id="@+id/menu_next"
            android:icon="@drawable/ic_refresh"
            android:title="@string/Next_Page"
            app:showAsAction="never" />


        <item android:id="@+id/action_help"
            android:title="@string/action_help"
            android:orderInCategory="103"
            app:showAsAction="never" />

    </group>

</menu>