<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.st33fo.glideforktt.Login">

    <ImageView
        android:id="@+id/kanyeloginheader"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitStart"

        android:src="@drawable/kanyeloginheader" />

    <TextView
        android:id="@+id/usernameHeader"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceSmall"

        android:textColor="@color/white" />

    <Button
        android:id="@+id/loginButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="5dp"
        android:background="@drawable/buttonshape"
        android:onClick="loginToAccount"
        android:text="@string/Login"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/guestButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_toRightOf="@+id/loginButton"
        android:background="@drawable/buttonshape"

        android:text="@string/Guest_Button"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameHeader"
        android:layout_centerHorizontal="true"
        android:ems="15"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="#d9d9d9"
        android:theme="@style/EditTextTheme" />

    <TextView
        android:id="@+id/passwordHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameHeader"

        android:layout_alignStart="@+id/usernameHeader"
        android:layout_below="@+id/userName"
        android:layout_marginLeft="0dp"

        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName"
        android:layout_below="@+id/passwordHeader"
        android:ems="15"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#d9d9d9d9"
        android:theme="@style/EditTextTheme" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/guestButton"
        android:layout_alignRight="@id/guestButton"
        android:layout_below="@id/guestButton"

        android:layout_margin="20dp"
        android:text="@string/Register"
        android:textColor="@color/white" />

</RelativeLayout>
